Detect GPU in gear

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ flywheel-gear-toolkit==0.6.21
 flywheel-gears==0.3.1
 flywheel-sdk==20.0.0
 torch==2.2.2
+torchvision===0.17.2
 numpy<2
 monai
-torchvision
 tqdm
 einops
 einops_exts
@@ -13,3 +13,4 @@ matplotlib
 scipy
 ml_collections
 SimpleITK
+mamba-ssm
