--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,6 @@
   "cite": "Baljer, L., Zhang, Y., Bourke, N.J., Donald, K.A., Bradford, L.E., Ringshaw, J.E., Williams, S.R., Deoni, S.C.L., Williams, S.C.R., , V\u00e1\u0161a, F. and Moran, R.J. (2025), Ultra-Low-Field Paediatric MRI in Low- and Middle-Income Countries: Super-Resolution Using a Multi-Orientation U-Net. Hum Brain Mapp, 46: e70112. https://doi.org/10.1002/hbm.70112",
   "command": "python /flywheel/v0/run.py",
   "config": {
-    "gpu": {
-      "type": "boolean",
-      "default": false,
-      "description": "Set if running GAMBAS model on GPU"
-    },
     "phase": {
       "type": "string",
       "default": "test",
@@ -50,7 +45,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/gambas:0.2.4"
+      "image": "flywheel/gambas:0.2.8"
     },
     "kcl-app-binary": "app/main.sh",
     "kcl-app-modalities": [
@@ -122,7 +117,7 @@
     "input": {
       "base": "file",
       "description": "input file (usually axial or isotropic reconstruction)",
-      "optional": false
+      "optional": true
     }
   },
   "label": "GAMBAS",
@@ -131,5 +126,5 @@
   "name": "gambas",
   "source": "https://github.com/levente-1/GAMBAS/tree/fw-dev",
   "url": "",
-  "version": "0.2.4"
+  "version": "0.2.8"
 }
