--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "cite": "Baljer, L., Zhang, Y., Bourke, N.J., Donald, K.A., Bradford, L.E., Ringshaw, J.E., Williams, S.R., Deoni, S.C.L., Williams, S.C.R., , V\u00e1\u0161a, F. and Moran, R.J. (2025), Ultra-Low-Field Paediatric MRI in Low- and Middle-Income Countries: Super-Resolution Using a Multi-Orientation U-Net. Hum Brain Mapp, 46: e70112. https://doi.org/10.1002/hbm.70112",
   "command": "python /flywheel/v0/run.py",
   "config": {
+    "force_run": {
+      "type": "boolean",
+      "default": false,
+      "description": "Force run the model to bypass check if within age range"
+    },
     "phase": {
       "type": "string",
       "default": "test",
@@ -45,7 +50,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/gambas:0.3.1"
+      "image": "flywheel/gambas:0.3.3"
     },
     "kcl-app-binary": "app/main.sh",
     "kcl-app-modalities": [
@@ -126,5 +131,5 @@
   "name": "gambas",
   "source": "https://github.com/levente-1/GAMBAS/tree/fw-dev",
   "url": "",
-  "version": "0.3.1"
+  "version": "0.3.3"
 }
