--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "author": "Levente Baljer, Niall Bourke",
-  "cite": "Baljer, L., Zhang, Y., Bourke, N.J., Donald, K.A., Bradford, L.E., Ringshaw, J.E., Williams, S.R., Deoni, S.C.L., Williams, S.C.R., , V\u00e1\u0161a, F. and Moran, R.J. (2025), Ultra-Low-Field Paediatric MRI in Low- and Middle-Income Countries: Super-Resolution Using a Multi-Orientation U-Net. Hum Brain Mapp, 46: e70112. https://doi.org/10.1002/hbm.70112",
+  "cite": "Baljer, L., Briski, U., Leech, R., Bourke, N. J., Donald, K. A., Bradford, L. E., Williams, S. R., Parkar, S., Kaleem, S., Osmani, S., Deoni, S. C., Williams, S. C., Moran, R. J., Robinson, E. C., & Váša, F. (2025, January 18). GAMBAS: Generalised-Hilbert Mamba for Super-resolution of Paediatric Ultra-Low-Field MRI. Medical Imaging with Deep Learning. https://openreview.net/forum?id=ikfiyBBHAz",
   "command": "python /flywheel/v0/run.py",
   "config": {
     "force_run": {
@@ -50,7 +50,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/gambas:0.3.7"
+      "image": "flywheel/gambas:0.4.0"
     },
     "kcl-app-binary": "app/main.sh",
     "kcl-app-modalities": [
@@ -65,7 +65,7 @@
       "non-commercial-use-only": false
     }
   },
-  "description": "Generalised-Hilbert Mamba for Super-resolution of Paediatric Ultra-Low-Field MRI. GPU enabled runs will run the GAMBAS model on the input image to generate a super-resolved image. CPU runs will be slower and have slightly degraded performance and is based of a Residual Convolution Network model. The model is based on the U-Net architecture and is trained on a dataset of paediatric ultra-low-field MRI images (3 months - 3 years).",
+  "description": "Generalised-Hilbert Mamba for Super-resolution of Paediatric Ultra-Low-Field MRI. GPU enabled runs will run the GAMBAS model on the input image to generate a super-resolved image. CPU runs will be slower and have slightly degraded performance and is based of a Residual Convolution Network model. The model is based on the U-Net architecture and is trained on a dataset of paediatric ultra-low-field MRI images (3 months - 3 years). Model weights version 2, trained on 215 subjects. ",
   "environment": {
     "FLYWHEEL": "/flywheel/v0",
     "LANG": "C.UTF-8",
@@ -129,7 +129,7 @@
   "license": "MIT",
   "maintainer": "Niall Bourke <niall.bourke@kcl.ac.uk>",
   "name": "gambas",
-  "source": "https://github.com/levente-1/GAMBAS/tree/fw-dev",
-  "url": "",
-  "version": "0.3.7"
+  "source": "https://github.com/UNITY-Physics/fw-GAMBAS",
+  "url": "https://openreview.net/forum?id=ikfiyBBHAz",
+  "version": "0.4.0"
 }
