--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
     },
     "gear-builder": {
       "category": "analysis",
-      "image": "flywheel/gambas:BETA.0.0.4"
+      "image": "flywheel/gambas:0.4.15"
     },
     "kcl-app-binary": "app/main.sh",
     "kcl-app-modalities": [
@@ -131,5 +131,5 @@
   "name": "gambas",
   "source": "https://github.com/levente-1/GAMBAS/tree/fw-dev",
   "url": "",
-  "version": "BETA.0.0.4"
+  "version": "0.4.15"
 }
